@@ -8,6 +8,7 @@
 #include <string.h>
 
 #include "soup-auth.h"
+#include "soup-connection.h"
 #include "soup-error.h"
 #include "soup-marshal.h"
 #include "soup-message.h"
