@@ -14,6 +14,7 @@
 #include <unistd.h>
 
 #include <glib.h>
+#include <libsoup/soup-address.h>
 #include <libsoup/soup-message.h>
 #include <libsoup/soup-server.h>
 #include <libsoup/soup-server-message.h>
